fix line height for target spacing in lists

--- a/_components/template/css/tags.css
+++ b/_components/template/css/tags.css
@@ -32,3 +32,6 @@ a, a:active, a:focus, a:hover, a:visited {
 a:focus {
     outline: 2px dotted var(--white);
 }
+main li {
+    line-height: 1.5    ;
+}
